# OcelotMDM

./: .gitignore  README.md  docker-compose.yml
api_collection/OcelotMDM/: Add device.bru  List devices.bru  bruno.json  ping.bru
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/api/: device_handler.go  token_handler.go
backend/internal/api/dto/: device.go  token.go  user.go
backend/internal/api/dto/binary_dto/: binary.go
backend/internal/api/dto/command_action_dto/: command_action.go
backend/internal/api/dto/command_dto/: command.go
backend/internal/api/dto/device_dto/: device.go
backend/internal/api/dto/token_dto/: token.go
backend/internal/api/dto/user_dto/: user.go
backend/internal/api/handler/: binary_handler.go  command_action_handler.go  command_handler.go  device_handler.go  token_handler.go  user_handler.go
backend/internal/api/interceptor/: interceptor.go
backend/internal/device/: errors.go  model.go  mongoRepository.go  repository.go  service.go
backend/internal/domain/binary/: error.go  model.go  mongoRepository.go  repository.go  service.go
backend/internal/domain/command/: errors.go  model.go  mongoRepository.go  repository.go  service.go
backend/internal/domain/command_action/: errors.go  model.go  mongoRepository.go  repository.go  service.go
backend/internal/domain/command_queue/: service.go
backend/internal/domain/device/: model.go  service.go
backend/internal/domain/file_repository/: repository.go  s3Repository.go
backend/internal/domain/logs/: errors.go  model.go  mongoRepository.go  repository.go  service.go
backend/internal/domain/mqtt/ocelot_mqtt/: client.go
backend/internal/domain/mqtt/paho_mqtt/: client.go
backend/internal/domain/paho_mqtt/: client.go
backend/internal/domain/service/command_queue/: service.go
backend/internal/domain/service/logs/: service.go
backend/internal/domain/service/logs_handler/: service.go
backend/internal/domain/service/uptime/: service.go
backend/internal/domain/service/web_hook/: service.go
backend/internal/domain/token/: errors.go  model.go  mongoRepository.go  service.go
backend/internal/domain/user/: model.go  mongoRepository.go  service.go
backend/internal/domain/vpn/: dto.go  service.go
backend/internal/storage/: definitions.go  mongo.go
backend/internal/token/: errors.go  mongoRepository.go  repository.go
backend/internal/user/: errors.go  model.go  mongoRepository.go  repository.go  service.go
backend/internal/vpn/: errors.go
client/core/: .clang-format  CMakeLists.txt  README.md  conanfile.txt  main.cpp
client/core/components/api/: CMakeLists.txt
client/core/components/api/dto/: CMakeLists.txt  dto.hpp
client/core/components/api/handler/: CMakeLists.txt  api_handler.cpp  api_handler.hpp
client/core/components/commands_impl/: CMakeLists.txt  commands_impl.cpp  commands_impl.hpp
client/core/components/db/: CMakeLists.txt
client/core/components/db/client/: CMakeLists.txt  db_client.cpp  db_client.hpp
client/core/components/db/dao/binary/: CMakeLists.txt  binary_dao.cpp  binary_dao.hpp
client/core/components/db/dao/command/: CMakeLists.txt  command_dao.cpp  command_dao.hpp
client/core/components/db/migrations/: CMakeLists.txt  base_migration.hpp  migration1.hpp  migration2.hpp
client/core/components/db/shared/: CMakeLists.txt  status_codes.hpp
client/core/components/log_streamer/: CMakeLists.txt  log_streamer.cpp  log_streamer.hpp
client/core/components/logger/: CMakeLists.txt  logger.cpp  logger.hpp
client/core/components/models/: CMakeLists.txt
client/core/components/models/binary/: CMakeLists.txt  binary_model.cpp  binary_model.hpp
client/core/components/models/command/: CMakeLists.txt  command_model.cpp  command_model.hpp
client/core/components/network/: CMakeLists.txt
client/core/components/network/http_client/: CMakeLists.txt  http_client.cpp  http_client.hpp  http_response.hpp
client/core/components/network/mqtt_client/: CMakeLists.txt  mqtt_client.cpp  mqtt_client.hpp
client/core/components/service/: CMakeLists.txt
client/core/components/service/CommandService/: CMakeLists.txt  command_service.cpp  command_service.hpp
client/core/components/service/command_service/: CMakeLists.txt  command_service.cpp  command_service.hpp
client/core/components/service/spawner_service/: CMakeLists.txt  spawner_service.cpp  spawner_service.hpp
client/core/components/service/spawner_service/android_spawner/: CMakeLists.txt
client/core/components/service/spawner_service/linux_spawner/: CMakeLists.txt  linux_spawner_service.cpp  linux_spawner_service.hpp
client/core/components/service/uptime_service/: CMakeLists.txt  uptime_service.cpp  uptime_service.hpp
client/core/components/timer/: CMakeLists.txt  timer.cpp  timer.hpp
client/core/components/utils/: CMakeLists.txt  utils.cpp  utils.hpp
client/linux/: art.txt  enrollment.sh  falling-field.ovpn
mosquitto/config/: mosquitto.conf
nginx/: nginx.conf
vpn_api/: Dockerfile  entrypoint.sh  go.mod  main.go  start_services.sh
